Changes made in the Section 1

--- a/main.html
+++ b/main.html
@@ -9,11 +9,26 @@
 <body>
 <!--Navigation Bar-->	
 	<nav class="navbar bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="html_task_pictures/default-logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-    </a>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="html_task_pictures/default-logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      </a>
+    </div>
+  </nav>
+<!--Section 1-->
+ <div id="section1">
+    <p>
+      <img src="html_task_pictures/pexels-photo-5965948.jpeg" alt="health-homepage" background-image="html_task_pictures/pexels-photo-5965948.jpeg">
+      cduhcd
+    </p>
+    <div class="centered">Centered</div>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+      scrambled it to make a type specimen book. </p>
   </div>
-</nav>
+
+  <!-- <p style="background-image: url(html_task_pictures/pexels-photo-5965948.jpeg);">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+      scrambled it to make a type specimen book.</p> --> 
 </body>
 </html>
