Made changes in CSS and navabar

--- a/main.html
+++ b/main.html
@@ -4,31 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Wellness</title>
+    <link rel="stylesheet" href="style.css">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-<!--Navigation Bar-->	
-	<nav class="navbar bg-body-tertiary">
+<!--Navigation Bar-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="html_task_pictures/default-logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="html_task_pictures/default-logo.png" alt="logo" width="30" height="24">       
       </a>
+      <div class="topnav-right">
+        <a href="#" id="home-button">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </div>
     </div>
-  </nav>
-<!--Section 1-->
- <div id="section1">
-    <p>
-      <img src="html_task_pictures/pexels-photo-5965948.jpeg" alt="health-homepage" background-image="html_task_pictures/pexels-photo-5965948.jpeg">
-      cduhcd
-    </p>
-    <div class="centered">Centered</div>
+   </nav>
+ <!--Section 1-->  
+   <div class="container-fluid" id="homepage-background">
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
       industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
-      scrambled it to make a type specimen book. </p>
-  </div>
-
-  <!-- <p style="background-image: url(html_task_pictures/pexels-photo-5965948.jpeg);">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
-      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
-      scrambled it to make a type specimen book.</p> --> 
-</body>
+      scrambled it to make a type specimen book</p>
+   </div>
+ </body>
 </html>
