Added the Section5 HTML & CSS file

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!--Navigation Bar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="html_task_pictures/default-logo.png" alt="logo" width="30" height="24">       
@@ -27,5 +27,33 @@
       industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
       scrambled it to make a type specimen book</p>
    </div>
- </body>
+
+   <br><br>
+<!--Seasonal Fruits & Veg  -->
+  <div class="container">
+    <center>
+      <h3 id="seasonal-heading">Seasonal Fruits & Veg </h3>
+      <p><i>
+        Organic food is produced by methods that comply with the standars of organic farmining.
+      </i></p>
+    </center>
+  </div>
+  <div class="container" id="seasonal-fruit-table">
+    <!-- <div class="container" id="seasonal-fruit" style="margin: 0;"> -->
+      <table>
+        <tr>
+          <td><img src="html_task_pictures/11.jpg" alt="blueberry images" width="500" height="300"></td>
+          <td><img src="html_task_pictures/2.jpg" alt="apples images" width="500" height="300"></td>
+          <td><img src="html_task_pictures/3.jpg" alt="fruit" width="500" height="300"></td>
+        </tr>
+        <tr>
+          <td><img src="html_task_pictures/8.jpg" alt="pumpkin images" width="500" height="300"></td>
+          <td><img src="html_task_pictures/5.jpg" alt="green veggies" width="500" height="300"></td>
+          <td><img src="html_task_pictures/83.jpg" alt="chillies" width="500" height="300"></td>
+        </tr>
+      </table>   
+  </div>
+
+  <br><br>
+</body>
 </html>
