Added the HTML & CSS file for Section-4

--- a/main.html
+++ b/main.html
@@ -27,5 +27,27 @@
       industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
       scrambled it to make a type specimen book</p>
    </div>
+
+   <br><br>
+
+<!-- Section 4 -->
+<div class="container-fluid" id="section-4">
+	<div class="flex-container">
+		<div class="text-block">
+			<p>To be successful in life, you need to define your own success, set clear goals, develop a growth mindset 
+				(believing you can improve), learn continuously, build strong relationships, practice self-discipline, 
+				and stay resilient by viewing failures as learning opportunities, all while taking consistent action and 
+				maintaining a positive, proactive approach. 
+			</p>
+		</div>
+		<div class="image-block">
+			<img src="html_task_pictures/-min.jpg">
+		</div>
+	</div>
+</div>
+
+<br><br>
+
  </body>
 </html>
+
