--- a/main.html
+++ b/main.html
@@ -27,5 +27,19 @@
       industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
       scrambled it to make a type specimen book</p>
    </div>
+
+   <br><br>
+<!-- Section 3  -->
+
+   <nav class="navbar bg-body-tertiary">
+     <!-- <img src="html_task_pictures/pexels-photo-4038777.jpeg" alt="strawberry search bar"> -->
+  <div class="container-fluid"  style="background-image: url(html_task_pictures/pexels-photo-4038777.jpeg);">
+    <a class="navbar-brand">Be Healthy!</a>
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
  </body>
 </html>
