--- a/main.html
+++ b/main.html
@@ -30,23 +30,40 @@
 
    <br><br>
 
-<!-- Section 4 -->
-<div class="container-fluid" id="section-4">
-	<div class="flex-container">
-		<div class="text-block">
-			<p>To be successful in life, you need to define your own success, set clear goals, develop a growth mindset 
-				(believing you can improve), learn continuously, build strong relationships, practice self-discipline, 
-				and stay resilient by viewing failures as learning opportunities, all while taking consistent action and 
-				maintaining a positive, proactive approach. 
-			</p>
-		</div>
-		<div class="image-block">
-			<img src="html_task_pictures/-min.jpg">
-		</div>
-	</div>
-</div>
+  
+  <div>
+ <!-- 25 Simple tips -->
+    <div class="container">
+      <div>
+        <img src="html_task_pictures/gffg.jpg" alt="picture of girl" class="circle-Image">
+      </div>
+      <div>
+        <h1 class="heading">25 Simple Tips to make Your Diet Healthier</h1>
+      </div>
 
-<br><br>
+    <br><br><br>
+  </div>
+
+<!-- Section 4 -->
+  <div class="container">
+    <div>
+      <p class="textpara">
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+      scrambled it to make a type specimen book
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+      scrambled it to make a type specimen book
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+      scrambled it to make a type specimen book
+    </p> 
+    </div>
+    <div>
+      <img src="html_task_pictures/-min.jpg" alt="picture of girl" class="myImage">
+    </div>
+      
+  </div>
 
  </body>
 </html>
