--- a/main.html
+++ b/main.html
@@ -9,26 +9,27 @@
 </head>
 <body>
 <!--Navigation Bar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="html_task_pictures/default-logo.png" alt="logo" width="30" height="24">       
-      </a>
-      <div class="topnav-right">
-        <a href="#" id="home-button">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="html_task_pictures/default-logo.png" alt="logo" width="30" height="24">       
+    </a>
+    <div class="topnav-right">
+      <a href="#" id="home-button">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
     </div>
-   </nav>
+  </div>
+  </nav>
  <!--Section 1-->  
-   <div class="container-fluid" id="homepage-background">
+ <div>
+    <div class="container-fluid" id="homepage-background">
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
       industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
       scrambled it to make a type specimen book</p>
    </div>
-
-   <br><br>
+ </div>
+    <br><br>
 
 <!-- Section 2 -->
   <div class="container">
@@ -44,7 +45,7 @@
 
     <div id="red">
       <br>
-        <img src="html_task_pictures/bowl-food-solid.svg" alt="Instagram logo" class="img">
+      <img src="html_task_pictures/bowl-food-solid.svg" alt="Instagram logo" class="img">
       <br><br>
       Over 300 Products
       <br>
