Made changes so that it looks similar to output

--- a/main.html
+++ b/main.html
@@ -22,13 +22,22 @@
     </div>
    </nav>
  <!-- Section 1-->  
-   <div class="container-fluid" id="homepage-background">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
-      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
-      scrambled it to make a type specimen book</p>
-   </div>
- </div>
-    <br><br>
+  <div>
+    <div class="section-1">
+      <div class="content">
+      <h1>HEALTH</h1>
+      <p>
+        Health is an asset that helps us maintain the balance of life and a sound mind.
+        It's the true elixir for a happy life as it leads to a calm and composed mind.
+      </p>
+      <!-- <a href="#" class="btn">READ MORE</a> -->
+      <input type="submit" value="Read More" id="read-more1">
+      </div>
+    </div>
+  </div>
+
+<br><br><br>
+    
 
 <!-- Section 2 -->
   <div class="container">
@@ -127,7 +136,7 @@
       </div>
      
     </div>
-
+<br><br>
  <!-- Section 4 -->   
  <!-- 25 Simple tips -->
     <div class="container">
@@ -158,19 +167,16 @@
   </div>
   <br><br><br><br>
 
-  <br><br>
+  <br><br><br><br><br><br><br>
+
   <!-- Section-5 -->
 <!--Seasonal Fruits & Veg  -->
-  <div class="container">
-    <center>
-      <h3 id="seasonal-heading">Seasonal Fruits & Veg </h3>
-      <p><i>
-        Organic food is produced by methods that comply with the standars of organic farmining.
-      </i></p>
-    </center>
-  </div>
-  <div class="container" id="seasonal-fruit-table">
-    <!-- <div class="container" id="seasonal-fruit" style="margin: 0;"> -->
+  <center>
+    <h3 id="seasonal-heading">Seasonal Fruits & Veg </h3>
+    <p><i>
+      Organic food is produced by methods that comply with the standars of organic farmining.
+    </i></p>
+  </center>
       <table>
         <tr>
           <td><img src="html_task_pictures/11.jpg" alt="blueberry images" width="500" height="300"></td>
@@ -185,12 +191,7 @@
       </table>   
   </div>
 
-  <br><br>
-</body>
-</html>
-
-
-<br><br>
+<br><br><br><br>
 <!-- Section 6 -->
 <div class="container-fluid" id="section-6">
 	<div class="flex-container">
@@ -211,34 +212,34 @@
 	</div>
 </div>
 
-<br><br>
-<br>
+<br><br><br>
+
 <!-- About US -->
-<div class="container" >
-	<h2 id="orange" style="color: rgb(253, 75, 5);">About Us</h2>
-	<div id="about-us">
-		<div class='box'>
-			<img src="html_task_pictures/instagram-brands.svg" alt="Instagram logo" style="width: 40px;height: 40px;">
+<h2 id="orange-title" style="color: orangered;">ABOUT US</h2>
+
+<div class="container">
+  <div id="about-us">  
+    <div class="about-text">
+      <p>
+        To be successful in business, you need a nimble mind to react to problems
+        faster and you need to be adept at understanding whatever is thrown your way.
+      </p>
+
+      <p>
+        <b>
+          To be successful in business, you need a nimble mind to react to problems
+          faster and you need to be adept at understanding whatever is thrown your way.
+        </b>
+      </p>
+    </div>
+
+    <div class="org-box">
+      <img src="html_task_pictures/instagram-brands.svg" alt="Instagram logo" style="width: 40px;height: 40px;">
 			<img src="html_task_pictures/facebook-f-brands.svg" alt="Facebook logo" style="width: 40px;height: 40px;">
 			<img src="html_task_pictures/twitter-brands.svg" alt="Twitter logo" style="width: 40px;height: 40px;">
-		</div>
-		<p>
-			<br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-			standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make 
-			a type specimen book. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum 
-			passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-		</p>
-		<p>
-			It is a long established fact that a reader will be distracted by the readable content of a page when looking at its 
-			layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 
-			'Content here, content here', making it look like readable English. It uses a dictionary of over 200 Latin words, combined
-			with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is 
-			therefore always free from repetition, injected humour, or non-characteristic words etc.<br>
-		</p>
-	</div>
-		<br><br>
+    </div>
+  </div>
 </div>
-
 
   
 </body>
