--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!--Navigation Bar-->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="html_task_pictures/default-logo.png" alt="logo" width="30" height="24">       
@@ -20,7 +20,18 @@
         <a href="#contact">Contact</a>
       </div>
     </div>
-   </nav>
+   </nav> -->
+
+  <ul>
+    <li><a href="#"> 
+        <img src="html_task_pictures/default-logo.png" alt="logo" width="30" height="24">       
+    </a></li>
+    <li class="navbar"><a href="#home">Home</a></li>
+    <li class="navbar"><a href="#contact">Contact</a></li>
+    <li class="navbar"><a href="#about">About</a></li>
+  </ul>
+
+
  <!-- Section 1-->  
   <div>
     <div class="section-1">
@@ -30,8 +41,7 @@
         Health is an asset that helps us maintain the balance of life and a sound mind.
         It's the true elixir for a happy life as it leads to a calm and composed mind.
       </p>
-      <!-- <a href="#" class="btn">READ MORE</a> -->
-      <input type="submit" value="Read More" id="read-more1">
+      <input type="button" value="READ MORE" id="read-more1">
       </div>
     </div>
   </div>
@@ -97,18 +107,18 @@
         <center>
         <table>
           <tr>
-              <td>
+              <td class="sec3-spacing">
                 <img src="html_task_pictures/5.png" alt="folk and spoon" class="food-icon">
                 Lorem Ipsum is simply dummy text
                 <!-- <br>
                 <i>arcdjvn</i> -->
               </td>
             
-              <td>
+              <td class="sec3-spacing">
                 <img src="html_task_pictures/6.png" alt="burger" class="food-icon">
                 Lorem Ipsum is simply dummy text
               </td>
-              <td>
+              <td class="sec3-spacing">
                 <img src="html_task_pictures/7.png" alt="fish" class="food-icon">
                 Lorem Ipsum is simply dummy text
               </td>
@@ -171,13 +181,14 @@
 
   <!-- Section-5 -->
 <!--Seasonal Fruits & Veg  -->
+  <div>
   <center>
     <h3 id="seasonal-heading">Seasonal Fruits & Veg </h3>
     <p><i>
       Organic food is produced by methods that comply with the standars of organic farmining.
     </i></p>
   </center>
-      <table>
+      <table class="seasonal-space">
         <tr>
           <td><img src="html_task_pictures/11.jpg" alt="blueberry images" width="500" height="300"></td>
           <td><img src="html_task_pictures/2.jpg" alt="apples images" width="500" height="300"></td>
@@ -215,9 +226,9 @@
 <br><br><br>
 
 <!-- About US -->
-<h2 id="orange-title" style="color: orangered;">ABOUT US</h2>
+<h2 id="orange-title" style="color: orangered; padding-left: 10%;">ABOUT US</h2>
 
-<div class="container">
+<!-- <div class="container-sec6"> -->
   <div id="about-us">  
     <div class="about-text">
       <p>
@@ -232,14 +243,15 @@
         </b>
       </p>
     </div>
-
     <div class="org-box">
-      <img src="html_task_pictures/instagram-brands.svg" alt="Instagram logo" style="width: 40px;height: 40px;">
-			<img src="html_task_pictures/facebook-f-brands.svg" alt="Facebook logo" style="width: 40px;height: 40px;">
-			<img src="html_task_pictures/twitter-brands.svg" alt="Twitter logo" style="width: 40px;height: 40px;">
-    </div>
+    <img src="html_task_pictures/instagram-brands.svg" alt="Instagram logo" style="width: 40px;height: 40px;">
+    <img src="html_task_pictures/facebook-f-brands.svg" alt="Facebook logo" style="width: 40px;height: 40px;">
+    <img src="html_task_pictures/twitter-brands.svg" alt="Twitter logo" style="width: 40px;height: 40px;">
   </div>
-</div>
+  </div>  
+  
+  
+<!-- </div> -->
 
   
 </body>
